--- a/stylesheet/header.css
+++ b/stylesheet/header.css
@@ -100,7 +100,8 @@ header nav .fullNav {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(17, 17, 17, 0.98);
+  background-color: rgba(17, 17, 17, 0.752);
+  backdrop-filter: blur(20px);
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
   display: flex;
@@ -149,7 +150,7 @@ header nav .menuIcon .bar {
 }
 
 #menu-toggle:checked ~ .menuIcon .bar:nth-child(1) {
-  transform: translateY(9px) rotate(45deg);
+  transform: translateY(3px) rotate(45deg);
 }
 
 #menu-toggle:checked ~ .menuIcon .bar:nth-child(2) {
