--- a/stylesheet/services.css
+++ b/stylesheet/services.css
@@ -3,8 +3,8 @@
   width: 100%;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
-  background-color: beige;
-  margin-top: -0px;
+  background-color: black;
+  margin-top: -50px;
   padding-bottom: 100px;
 }
 
@@ -12,7 +12,7 @@
   font-size: 4vw;
   font-family: "Audiowide", sans-serif;
   display: flex;
-  color: black;
+  color: white;
   text-transform: uppercase;
   white-space: nowrap;
   overflow: hidden;
@@ -43,7 +43,7 @@
   }
   ul li {
     list-style: none;
-    -webkit-text-stroke: 1px #000;
+    -webkit-text-stroke: 1px #fff;
     -webkit-text-fill-color: transparent;
   }
 }
@@ -89,6 +89,7 @@
     justify-content: center;
     align-items: center;
     gap: 100px;
+    color: white;
     animation: eachCardReveal 1s both;
     animation-timeline: view();
 
@@ -144,7 +145,7 @@
   transform: translateX(-50%);
   width: 4px;
   height: 100%;
-  background-color: black;
+  background-color: white;
   border-radius: 30px;
   /* animation: lineGrow 5s both; */
   /* animation-timeline: view(); */
