--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body {
   font-family: Arial, sans-serif;
-  margin: 0px;
-  padding: 0px;
-
+  box-sizing: border-box;
   background-color: #000;
+  min-height: 100vh;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
