--- a/stylesheet/about.css
+++ b/stylesheet/about.css
@@ -7,41 +7,42 @@
   width: 100%;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
-  margin-top: -0px;
+  margin-top: -50px;
   padding-bottom: 100px;
 
-  background-color: hsla(204, 0%, 100%, 1);
-  background-image: radial-gradient(
-      circle at 0% 0%,
-      hsla(295.99999999999994, 77%, 74%, 0.35) 3.1210986267166043%,
-      transparent 40%
+  background-color: hsla(269, 98%, 66%, 1);
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1799 1799' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E"),
+    radial-gradient(
+      circle at 94% 95%,
+      hsla(360, 88%, 68%, 1) 3%,
+      transparent 76%
     ),
     radial-gradient(
-      circle at 20% 0%,
-      hsla(236.91176470588243, 77%, 74%, 0.35) 3.1210986267166043%,
-      transparent 40%
+      circle at 89% 34%,
+      hsla(93, 96%, 51%, 1) 1%,
+      transparent 86%
     ),
     radial-gradient(
-      circle at 40% 0%,
-      hsla(186.61764705882354, 77%, 74%, 0.35) 3.1210986267166043%,
-      transparent 40%
+      circle at 86% 50%,
+      hsla(148, 80%, 65%, 1) 7%,
+      transparent 76%
     ),
     radial-gradient(
-      circle at 60% 0%,
-      hsla(127.0588235294118, 77%, 74%, 0.35) 3.1210986267166043%,
-      transparent 40%
+      circle at 89% 79%,
+      hsla(78, 76%, 53%, 1) 7%,
+      transparent 87%
     ),
     radial-gradient(
-      circle at 80% 0%,
-      hsla(62.20588235294117, 77%, 74%, 0.35) 3.1210986267166043%,
-      transparent 40%
+      circle at 15% 44%,
+      hsla(194, 74%, 80%, 1) 15%,
+      transparent 81%
     ),
     radial-gradient(
-      circle at 100% 0%,
-      hsla(23.823529411764703, 77%, 74%, 0.35) 3%,
-      transparent 40%
+      circle at 99% 20%,
+      hsla(265, 88%, 92%, 1) 1%,
+      transparent 68%
     );
-  background-blend-mode: normal, normal, normal, normal, normal, normal;
+  background-blend-mode: overlay, normal, normal, normal, normal, normal, normal;
 }
 
 .infinite-text {
@@ -53,6 +54,7 @@
   white-space: nowrap;
   overflow: hidden;
   box-sizing: border-box;
+  padding: 50px 0;
   animation: reveal 1s ease forwards;
   animation-timeline: view();
   /* gap: -10px; */
@@ -119,6 +121,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px 0;
 
     p {
       font-size: 2.5vw;
@@ -137,6 +140,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 40px 0;
     gap: 30px;
     div {
       display: flex;
@@ -294,8 +298,6 @@
       .card:hover {
         transform: scale3d(1.01, 1.01, 1);
         box-shadow: 10px 10px 5px thistle;
-        border: 5px solid black;
-        /* overflow: hidden; */
       }
       .card:nth-child(2):hover {
         box-shadow: -10px 10px 5px thistle;
@@ -303,16 +305,24 @@
     }
   }
   .stat {
-    width: 60%;
+    width: 40%;
     margin-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #000000;
+    animation: text-reveal 4s ease forwards;
+    animation-timeline: view(50% 0%);
+    border-radius: 20px;
+    padding: 10px;
+
+    /* color: white; */
     /* gap: 50px; */
 
     div {
       width: 100%;
       display: flex;
+      text-wrap: nowrap;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -326,12 +336,19 @@
         font-size: 3vw;
         font-weight: 400;
         font-family: "Zain", sans-serif;
+        color: white;
       }
       h2 {
         margin: 0px;
         font-size: 1.5vw;
         font-weight: 400;
         font-family: "Zain", sans-serif;
+        /* background-color: thistle; */
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
       }
     }
   }
@@ -393,11 +410,13 @@
     visibility: visible;
     opacity: 0;
     transform: translateY(40px);
+    /* width: 0%; */
   }
   100% {
     visibility: visible;
     opacity: 1;
     transform: translateY(0px);
+    /* width: 100%; */
   }
 }
 
@@ -413,7 +432,7 @@
 }
 
 @media (max-width: 768px) {
-  #about .infinite-text {
+  .infinite-text {
     font-size: 6vw;
   }
   #about .part2 {
@@ -470,7 +489,7 @@
 }
 
 @media (max-width: 568px) {
-  #about .infinite-text {
+  .infinite-text {
     font-size: 8vw;
   }
   #about .part2 {
@@ -478,6 +497,19 @@
       width: 100%;
       p {
         font-size: 5vw;
+      }
+    }
+    .cont {
+      gap: 20px;
+      width: 80%;
+      div {
+        gap: 5px;
+        h4 {
+          font-size: 4.5vw;
+        }
+        p {
+          font-size: 3.2vw;
+        }
       }
     }
     .mentors {
