updated UI for responsiveness

--- a/stylesheet/about.css
+++ b/stylesheet/about.css
@@ -9,7 +9,8 @@
   border-top-right-radius: 50px;
   margin-top: -50px;
   padding-bottom: 100px;
-
+  position: relative;
+  z-index: 3;
   background-color: hsla(269, 98%, 66%, 1);
   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1799 1799' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E"),
     radial-gradient(
@@ -485,6 +486,19 @@
         }
       }
     }
+    .stat {
+      /* flex-direction: column; */
+      gap: 20px;
+      width: 60%;
+      div {
+        h1 {
+          font-size: 4vw;
+        }
+        h2 {
+          font-size: 2.5vw;
+        }
+      }
+    }
   }
 }
 
@@ -544,10 +558,10 @@
       width: 80%;
       div {
         h1 {
-          font-size: 5vw;
+          font-size: 5.5vw;
         }
         h2 {
-          font-size: 3vw;
+          font-size: 3.5vw;
         }
       }
     }
