--- a/stylesheet/home.css
+++ b/stylesheet/home.css
@@ -448,8 +448,6 @@ main #home .part2 {
     font-size: 2vw;
     /* gap: 5px; */
     letter-spacing: 2px;
-    right: -20%;
-    transform: translateX(0%);
   }
 }
 @media (max-width: 500px) {
@@ -481,13 +479,14 @@ main #home .part2 {
       }
       h2 {
         /* margin: 0px; */
-        font-size: 4.5vw;
+        font-size: 5vw;
         width: 100%;
       }
       .hero {
         p {
           font-weight: 500;
-          font-size: 2.5vw;
+          font-size: 3vw;
+          padding: 3px 10px;
         }
       }
     }
