--- a/stylesheet/services.css
+++ b/stylesheet/services.css
@@ -6,7 +6,8 @@
   background-color: black;
   margin-top: -50px;
   padding-bottom: 100px;
-
+  z-index: 4;
+  position: relative;
   background-color: hsla(0, 0%, 5%, 1);
   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 3000 3000' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E"),
     radial-gradient(
@@ -110,8 +111,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 40px;
-  /* background-color: turquoise; */
+  gap: 100px;
 
   .card {
     display: flex;
@@ -133,7 +133,7 @@
         border-radius: 20px;
       }
       span {
-        font-size: 5.5vw;
+        font-size: 4vw;
         /* background-color: aqua; */
       }
     }
@@ -204,7 +204,7 @@
 
 @media (max-width: 968px) {
   #service .part2inside {
-    gap: 10px;
+    gap: 60px;
   }
 }
 
@@ -214,11 +214,12 @@
   }
   #service .part2inside {
     width: 80%;
+    gap: 50px;
 
     .card {
       .imgcont {
         span {
-          font-size: 12vw;
+          font-size: 6vw;
         }
       }
       p {
@@ -235,14 +236,13 @@
   }
   #service .part2inside {
     width: 90%;
-    gap: 50px;
+    gap: 20px;
     .card {
-      gap: 30px;
+      gap: 50px;
       /* background-color: aqua; */
       .imgcont {
         span {
-          font-size: 16vw;
-          /* background-color: aqua; */
+          font-size: 7vw;
         }
       }
       p {
