--- a/stylesheet/about.css
+++ b/stylesheet/about.css
@@ -1,7 +1,3 @@
-/* font-family: "Rampart One", sans-serif; */
-/* font-family: "Zain", sans-serif; */
-/* font-family: "Rubik Glitch", system-ui; */
-
 #about {
   height: fit-content;
   width: 100%;
@@ -55,14 +51,14 @@
   white-space: nowrap;
   overflow: hidden;
   box-sizing: border-box;
-  padding: 50px 0;
+  padding: 20px 0;
   animation: reveal 1s ease forwards;
   animation-timeline: view();
   /* gap: -10px; */
   -webkit-mask-image: linear-gradient(
     to right,
     rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 1) 30%,
+    rgba(0, 0, 0, 1) 10%,
     rgba(0, 0, 0, 1) 90%,
     rgba(0, 0, 0, 0) 100%
   );
@@ -125,9 +121,11 @@
     padding: 10px 0;
 
     p {
-      font-size: 2.5vw;
+      font-size: 3vw;
       font-weight: 100;
       font-family: "Audiowide", sans-serif;
+      /* font-family: "Zain", sans-serif; */
+      /* font-family: "Bebas Neue", cursive; */
       color: black;
       animation: text-reveal 2s ease forwards;
       overflow: hidden;
@@ -137,6 +135,7 @@
     }
   }
   .cont {
+    height: fit-content;
     width: 75%;
     display: flex;
     justify-content: center;
@@ -426,7 +425,7 @@
     .text {
       width: 70%;
       p {
-        font-size: 3.8vw;
+        font-size: 4vw;
       }
     }
   }
@@ -439,6 +438,9 @@
   #about .part2 {
     .text {
       width: 80%;
+      p {
+        font-size: 5vw;
+      }
     }
     .cont {
       flex-direction: column;
@@ -505,17 +507,26 @@
 @media (max-width: 568px) {
   .infinite-text {
     font-size: 8vw;
+
+    ul {
+      li {
+        font-size: 10vw;
+      }
+    }
   }
   #about .part2 {
     .text {
       width: 100%;
       p {
         font-size: 5vw;
+        /* padding: 40px 0; */
       }
     }
     .cont {
       gap: 20px;
       width: 80%;
+      /* padding: 50px 0; */
+      height: fit-content;
       div {
         gap: 5px;
         h4 {
@@ -550,6 +561,9 @@
             }
           }
         }
+      }
+      .infinite-text {
+        padding: 50px 0;
       }
     }
     .stat {
