--- a/stylesheet/services.css
+++ b/stylesheet/services.css
@@ -8,34 +8,46 @@
   padding-bottom: 100px;
   z-index: 4;
   position: relative;
-  background-color: hsla(0, 0%, 5%, 1);
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 3000 3000' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E"),
+
+  background-color: hsla(359, 100%, 50%, 1);
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1746 1746' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E"),
     radial-gradient(
-      circle at 27% 38%,
-      hsla(340.537650274185, 85%, 17%, 0.77) 0%,
-      transparent 44.23046172483418%
+      circle at 0% 99%,
+      hsla(11, 100%, 50%, 1) 0%,
+      transparent 67%
     ),
     radial-gradient(
-      circle at 49% 56%,
-      hsla(276.6176470588236, 89%, 19%, 0.89) 0%,
-      transparent 68.29972231904205%
+      circle at 46% 94%,
+      hsla(177, 100%, 50%, 1) 0%,
+      transparent 81%
     ),
     radial-gradient(
-      circle at 33% 72%,
-      hsla(241.99999999999997, 94%, 16%, 0.68) 0%,
-      transparent 50%
+      circle at 89% 8%,
+      hsla(304, 100%, 9%, 1) 0%,
+      transparent 150%
     ),
     radial-gradient(
-      circle at 93% 31%,
-      hsla(240, 100%, 2%, 0.68) 0%,
-      transparent 50%
+      circle at 89% 8%,
+      hsla(206, 100%, 9%, 1) 0%,
+      transparent 150%
     ),
     radial-gradient(
-      circle at 90% 46%,
-      hsla(241.99999999999997, 94%, 16%, 0.68) 0%,
-      transparent 50%
+      circle at 93% 95%,
+      hsla(236, 100%, 23%, 1) 0%,
+      transparent 66%
+    ),
+    radial-gradient(
+      circle at 89% 8%,
+      hsla(0, 100%, 99%, 1) 0%,
+      transparent 150%
+    ),
+    radial-gradient(
+      circle at 89% 8%,
+      hsla(55, 94%, 54%, 1) 0%,
+      transparent 150%
     );
-  background-blend-mode: overlay, normal, normal, normal, normal, normal;
+  background-blend-mode: overlay, normal, normal, normal, normal, normal, normal,
+    normal;
 }
 
 #service .infinite-text {
@@ -102,6 +114,7 @@
   padding: 50px 0;
   /* background-color: aqua; */
   position: relative;
+  /* overflow: hidden; */
 }
 
 #service .part2inside {
@@ -137,20 +150,18 @@
         /* background-color: aqua; */
       }
     }
-    .imgcont:nth-child(even) {
-      text-align: left;
-    }
     p {
+      /* font-family: "Rampart One", cursive; */
       /* font-family: "Zain", sans-serif; */
-      /* font-family: "Audiowide", sans-serif; */
-      font-family: "Bebas Neue", sans-serif;
+      font-family: "Audiowide", sans-serif;
+      /* font-family: "Bebas Neue", sans-serif; */
       /* background-color: lightgreen; */
       width: 50%;
       font-size: 2.2vw;
       span {
-        font-weight: 900;
+        font-weight: 100;
         text-decoration: underline;
-        color: rgb(120, 255, 41);
+        color: rgb(94, 255, 0);
       }
     }
   }
@@ -160,12 +171,20 @@
   }
   .card:nth-child(2) {
     animation-range: entry 40% cover 60%;
+    flex-direction: row-reverse;
+    .imgcont {
+      text-align: left;
+    }
   }
   .card:nth-child(3) {
     animation-range: entry 60% cover 80%;
   }
   .card:nth-child(4) {
     animation-range: entry 30% cover 50%;
+    flex-direction: row-reverse;
+    .imgcont {
+      text-align: left;
+    }
   }
 }
 
@@ -193,6 +212,26 @@
     opacity: 1;
   }
 }
+@keyframes eachCardRevealMobile {
+  from {
+    transform: translateX(-50px) scale(1);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0) scale(1);
+    opacity: 1;
+  }
+}
+@keyframes eachCardRevealMobile2 {
+  from {
+    transform: translateX(50px) scale(1);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0) scale(1);
+    opacity: 1;
+  }
+}
 @keyframes lineGrow {
   from {
     height: 0%;
@@ -204,28 +243,65 @@
 
 @media (max-width: 968px) {
   #service .part2inside {
-    gap: 60px;
-  }
-}
-
-@media (max-width: 768px) {
-  #service .infinite-text {
-    font-size: 6vw;
-  }
-  #service .part2inside {
+    gap: 20px;
     width: 80%;
-    gap: 50px;
 
     .card {
+      width: fit-content;
+      gap: 40px;
       .imgcont {
+        /* width: 60%; */
         span {
           font-size: 6vw;
         }
       }
       p {
-        font-family: "Zain", sans-serif;
-        font-size: 3vw;
+        font-size: 3.5vw;
       }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  #service .part2 .vertLine {
+    left: 10%;
+    display: none;
+  }
+  #service .infinite-text {
+    font-size: 6vw;
+  }
+  #service .part2inside {
+    /* background-color: tomato; */
+    width: 90%;
+    gap: 50px;
+
+    .card {
+      animation: eachCardRevealMobile 2s both;
+      animation-timeline: view();
+      flex-direction: row;
+      gap: 50px;
+      .imgcont {
+        text-align: left;
+        width: fit-content;
+        span {
+          font-size: 6vw;
+        }
+      }
+      p {
+        /* background-color: turquoise; */
+        width: 80%;
+        font-family: "Zain", sans-serif;
+        font-size: 4vw;
+      }
+    }
+    .card:nth-child(even) {
+      flex-direction: row;
+      animation: eachCardRevealMobile 2s both;
+      animation-timeline: view();
+      .imgcont {
+        text-align: left;
+      }
+      /* flex-direction: row; */
     }
   }
 }
@@ -236,9 +312,9 @@
   }
   #service .part2inside {
     width: 90%;
-    gap: 20px;
+    gap: 50px;
     .card {
-      gap: 50px;
+      gap: 30px;
       /* background-color: aqua; */
       .imgcont {
         span {
@@ -246,7 +322,7 @@
         }
       }
       p {
-        font-size: 4vw;
+        font-size: 5vw;
       }
     }
   }
